src/Pages/Search/Search.css
.MainContent {
    width: calc(100% - 1.5rem);
    margin: auto;
    margin-top: 1rem;
}

input:focus,
textarea:focus {
    outline: none;
    box-shadow: none;
}

.MainForm {
    display: flex;
    align-items: center;
    justify-content: center;
}

#find {
    background-color: white;
    background-image: url('search.png');
    background-position: 15px 16px;
    background-size: 20px 20px;
    background-repeat: no-repeat;
    width: 80%;
    padding: 0.9rem;
    padding-left: 40px;
    margin: auto;
    border: .3px solid black;
    border-radius: 50px;
    font-size: 1.2rem;
}

#find::placeholder {
    font-size: 1.2rem;
}

#find:focus,
#find:focus-visible {
    outline: none;
}

.container {
    display: grid;
    /* grid-template-columns: repeat(auto-fill, minmax(10rem, 100%)); */
    grid-template-columns: 50% 2fr;
    margin: 2rem auto;
    margin-bottom: 4.5rem;
}

.CardLink {
    text-decoration: none;
    color: var(--text-color);
}

.EmptySearch {
    width: 85%;
    margin: auto;
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    opacity: 0.8;
}

@media screen and (max-width: 345px) {
    .MainContent {
        margin-top: 1.2rem;
    }

    #find::placeholder {
        padding: 0.6rem;
    }

    #find {
        background-position: 15px 7px;
        background-size: 20px 20px;
        padding: 0.6rem;
        padding-left: 40px;
        font-size: 1rem;
    }
}

